# fastapi-simple-crud

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: tests.yml
app/: __main__.py
app/config/: events.py  settings.py
